fix bottom navigation bar menu

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # Product Specific
   readmore: ^3.0.0
+  flutter_rating_bar: ^4.0.1
 
 
 # --------------------- END PACKAGES ----------------------#
