--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
   assets:
     - assets/logos/
     - assets/icons/brands/
+    - assets/icons/payment_methods/
     - assets/images/on_boarding_images/
     - assets/images/animations/
     - assets/images/banners/
