--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,9 @@ dependencies:
   http: ^1.1.0
   intl: ^0.18.1
   logger: ^2.0.1
+  lottie: ^3.1.2
   url_launcher: ^6.1.12
+  connectivity_plus: ^5.0.1
   carousel_slider: ^4.2.1
   flutter_native_splash: ^2.3.2
   smooth_page_indicator: ^1.1.0
@@ -35,6 +37,10 @@ dependencies:
   readmore: ^3.0.0
   flutter_rating_bar: ^4.0.1
 
+  #firebase
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.14.0
+  cloud_firestore: ^4.13.1
 
 # --------------------- END PACKAGES ----------------------#
 
